--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "cSpell.language": "en,es-ES",
-  "cSpell.words": ["rarito", "inicialización"]
+  "cSpell.words": [
+    "inicialización",
+    "rarito",
+    "subprograma"
+  ]
 }
