Add params to function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "cSpell.language": "en,es-ES",
   "cSpell.words": [
     "inicialización",
+    "modularidad",
     "rarito",
+    "reusabilidad",
     "subprograma"
   ]
 }
