Add more algebra

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,20 @@
 {
   "cSpell.language": "en,es-ES",
   "cSpell.words": [
+    "algebr",
+    "Bagdad",
+    "Baldor",
+    "compleción",
+    "geometria",
+    "Hisāb",
     "inicialización",
+    "Juarismi",
     "modularidad",
+    "muqābala",
     "rarito",
     "reusabilidad",
-    "subprograma"
+    "subprograma",
+    "wa'l",
+    "ŷabr"
   ]
 }
