--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.language": "en,es-ES",
   "cSpell.words": [
     "algebr",
+    "Asociatividad",
     "Bagdad",
     "Baldor",
     "compleción",
